--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+.container{
+    /* Group 5 */
+    background: #15263F;
+    box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
+    border-radius: 15px;s
+
+
+}
+
 body{
     background-color: #0D192C;
 }
