--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,15 @@
     /* Group 5 */
     background: #15263F;
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
-    border-radius: 15px;s
-
-
+    border-radius: 15px;
+    width: 356px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+
+
 
 body{
     background-color: #0D192C;
