--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,27 @@
     box-sizing: border-box;
 }
 
-.container{
+.flex-container{
+
+    display:flex;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+}
+
+
+.nft-component{
     /* Group 5 */
     background: #15263F;
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
     border-radius: 15px;
     width: 356px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+img{
+    position: relative;
+    width: 95%;
+    margin-left: 8px;
 }
 
 
