--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,39 @@
 }
 
 .flex-container{
-
     display:flex;
     align-items: center;
     height: 100vh;
     justify-content: center;
 }
 
-
 .nft-component{
     /* Group 5 */
     background: #15263F;
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
     border-radius: 15px;
-    width: 356px;
+    width: 300px;
+    padding: 10px
 }
 
 img{
     position: relative;
-    width: 95%;
-    margin-left: 8px;
+    width: 100%;
 }
 
-
-
+span {
+    display: block;
+}
 
 body{
     background-color: #0D192C;
+}
+
+#Equilibrium{
+    font-family: 'Outfit';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 42px;
+    color: #FFFFFF;
 }
