--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
     border-radius: 15px;
     width: 300px;
-    padding: 10px
+    padding: 22px
 }
 
 .profile-image{
@@ -43,15 +43,29 @@ body{
 }
 
 #equilibrium-content{
-color: #8BACD9;
-margin-top: 10px;
-margin-bottom: 10px;
+    color: #8BACD9;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #combined-shape{
     color: #00FFF8;
     font-weight: 600;
-font-size: 16px;
-line-height: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    margin-left: 2px;  
+}
 
+.image-container{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+
+#clock{
+    color: #8BACD9;
+    margin-left: 2px; 
+    font-weight: 400;
+    font-size: 16px; 
 }
