--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,30 @@
 .profile-image{
     position: relative;
     width: 100%;
+   height: auto;    
 }
+
+.overlay {
+    position: absolute;
+    height: 255px;
+    width: 257px;
+    opacity: 0;
+    transition: .5s ease;
+    background: #00FFF8;
+    border-radius: 10px;
+  }
+
+  .image-container:hover .overlay {
+    opacity: 0.5;
+  }
+  
+  .text {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+
 
 
 body{
@@ -90,3 +113,4 @@ hr{
     font-weight: 400;
     font-size: 16px;
 }
+
